# bae

./: .cursorrules  .env.example  .gitignore  BAE_CUE_FLAC_SPEC.md  BAE_DATABASE_SCHEMA.md  BAE_IMPORT_WORKFLOW.md  BAE_LIBRARY_CONFIGURATION.md  BAE_STREAMING_ARCHITECTURE.md  CARGO_CHEAT_SHEET.md  CUE_FLAC_DEBUG_STATUS.md  DEVELOPMENT.md  DIOXUS_DRAG_DROP_BUG_REPORT.md  DIOXUS_DRAG_DROP_FIX.md  PROGRESS_SERVICE_REFACTOR.md  README.md  RUST_CHEAT_SHEET.md  TASKS.md  dioxus_issue_body.md  dioxus_pr_body.md  playback-plan.md  rust-toolchain.toml  test_import.sh
bae/: ACTION_PLAN.md  CUSTOM_STORAGE_INTEGRATION.md  CUSTOM_STORAGE_STATUS.md  Cargo.toml  Dioxus.toml  NEXT_STEPS.md  README.md  TORRENT_SEEDING.md  TORRENT_STORAGE_CONTEXT.md  build.rs  clippy.toml  package-lock.json  package.json  tailwind.config.js
bae/.cargo/: config.toml
bae/assets/: main.css  tailwind.css
bae/cpp/: bae_storage.cpp  bae_storage.h  bae_storage_cxx_wrappers.cpp  bae_storage_helpers.cpp  bae_storage_helpers.h
bae/examples/: dump_seektable.rs  test_metaflac.rs
bae/patches/: dioxus-html-0.7.1.patch
bae/sample_api_payloads/: discogs_artist.json  discogs_master.json  discogs_release.json
bae/scripts/: generate_test_flac.sh
bae/src/: album_import_context.rs  api_keys.rs  app_context.rs  audio_processing.rs  cache.rs  checkout.rs  chunking.rs  cloud_storage.rs  config.rs  cue_flac.rs  database.rs  discogs.rs  discogs_client.rs  encryption.rs  import_service.rs  lib.rs  library.rs  library_context.rs  main.rs  media_controls.rs  models.rs  musicbrainz.rs  network.rs  progress_service.rs  s3_config.rs  search_context.rs  secure_config.rs  subsonic.rs  test_support.rs
bae/src/cd/: cue_generator.rs  drive.rs  ffi.rs  log_generator.rs  mod.rs  paranoia.rs  ripper.rs
bae/src/components/: album_card.rs  album_detail.rs  album_import.rs  app.rs  home.rs  library.rs  mod.rs  navbar.rs  now_playing_bar.rs  playback_hooks.rs  settings.rs
bae/src/components/album_import/: album_import_manager.rs  import_workflow.rs  import_workflow_manager.rs  mod.rs  release_item.rs  release_list.rs  search_form.rs  search_masters_form.rs  search_masters_list.rs  search_masters_page.rs  search_masters_status.rs  search_page.rs  search_status.rs
bae/src/components/album_import/search_masters/: form.rs  item.rs  list.rs  mod.rs  page.rs  status.rs
bae/src/components/album_search/: album_releases.rs  album_search.rs  album_search_manager.rs  album_search_result.rs  import_workflow.rs  mod.rs  release_item.rs  release_list.rs  search_form.rs  search_item.rs  search_list.rs
bae/src/db/: client.rs  mod.rs  models.rs
bae/src/discogs/: client.rs  mod.rs  models.rs
bae/src/import/: album_chunk_layout.rs  album_file_layout.rs  album_layout.rs  album_track_creator.rs  cover_art.rs  discogs_matcher.rs  discogs_parser.rs  folder_metadata_detector.rs  folder_scanner.rs  handle.rs  metadata_persister.rs  mod.rs  musicbrainz_parser.rs  pipeline.rs  progress_emitter.rs  progress_handle.rs  progress_service.rs  progress_tracker.rs  service.rs  track_file_mapper.rs  track_to_file_mapper.rs  types.rs  upload_pipeline.rs
bae/src/import/pipeline/: chunk_producer.rs  chunk_producer_test.rs  chunk_reader_test.rs  mod.rs  tests.rs  torrent_producer.rs
bae/src/import/progress/: handle.rs  mod.rs  tracker.rs
bae/src/playback/: chunk_buffer.rs  cpal_output.rs  mod.rs  reassembly.rs  service.rs  streaming.rs  symphonia_decoder.rs
bae/src/playback/progress/: handle.rs  mod.rs
bae/src/torrent/: client.rs  ffi.rs  manager.rs  metadata_detector.rs  mod.rs  parser.rs  piece_mapper.rs  seeder.rs  selective_downloader.rs  storage.rs
bae/src/torrent/progress/: handle.rs  mod.rs
bae/src/ui/: album_import_context.rs  app.rs  app_context.rs  context.rs  import_context.rs  local_file_url.rs  mod.rs  window_activation.rs
bae/src/ui/components/: album_card.rs  album_detail.rs  app.rs  dialog.rs  dialog_context.rs  import_hooks.rs  library.rs  library_search_context.rs  mod.rs  navbar.rs  now_playing_bar.rs  playback_hooks.rs  queue_sidebar.rs  settings.rs  title_bar.rs  torrent_hooks.rs  torrent_seeder_hooks.rs
bae/src/ui/components/album_card/: dropdown_menu.rs  mod.rs  release_submenu.rs  utils.rs  view.rs
bae/src/ui/components/album_detail/: album_art.rs  album_cover_section.rs  album_metadata.rs  back_button.rs  error.rs  (+13 more)
bae/src/ui/import_context/: detection.rs  import.rs  mod.rs  navigation.rs  search.rs  state.rs  types.rs
bae/src/ui/window_activation/: macos_window.rs
bae/tests/: STREAMING_SEEK_TEST.md  cue_flac_import_test.rs  import_reassembly_test.rs  test_delete.rs  test_final_verification.rs  test_mb_discid_calculation.rs  test_playback_behavior.rs  test_roundtrip_simple.rs  test_roundtrip_vinyl.rs  test_streaming_seek.rs  test_streaming_seek_fast.rs
bae/tests/fixtures/: acdc_back_in_black.cue  vinyl_album.cue  vinyl_master_test.json
bae/tests/fixtures/flac/: 01 Test Track 1.flac  02 Test Track 2.flac
bae/tests/support/: do_roundtrip.rs  mock_cloud_storage.rs  mod.rs
(+89 files in other folders)
