[package]
name = "bae"
version = "0.1.0"
authors = ["dima"]
edition = "2021"
build = "build.rs"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "desktop"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
keyring = { version = "3.6.3", features = ["apple-native"] }
rfd = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
