[package]
name = "bae"
version = "0.1.0"
authors = ["dima"]
edition = "2021"
build = "build.rs"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "desktop"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
keyring = { version = "3.6.3", features = ["apple-native"] }
rfd = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"
async-trait = "0.1"
dirs = "5.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
nom = "7.1"              # Parser combinator for CUE format
symphonia = { version = "0.5", features = ["flac"] }  # Audio processing for precise seeking
dotenvy = "0.15"        # .env file loading for dev mode
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Logging configuration
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
