[package]
name = "bae"
version = "0.1.0"
authors = ["dima"]
edition = "2021"
build = "build.rs"
default-run = "bae"

[lib]
name = "bae"
path = "src/lib.rs"

[dependencies]
dioxus = { version = "0.7.0", features = ["router", "desktop"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
keyring = { version = "3.6.3", features = ["apple-native"] }
rfd = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
aws-config = "1.1"
aws-sdk-s3 = "1.15"
aws-credential-types = "1.1"
async-trait = "0.1"
dirs = "5.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
nom = "7.1"              # Parser combinator for CUE format
symphonia = { version = "0.5", features = ["flac"] }  # Audio processing for precise seeking
flacenc = "0.4"         # FLAC encoding for CUE/FLAC splitting
libflac-sys = "0.3.4"    # FFI bindings to libFLAC for seektable generation
libc = "0.2"            # C types for libflac-sys FFI
rayon = "1.10"          # Parallel processing for CUE/FLAC splitting
cpal = "0.15"           # Cross-platform audio I/O
dotenvy = "0.15"        # .env file loading for dev mode
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }  # Logging configuration
futures = "0.3.31"
tokio-stream = "0.1.17"
souvlaki = "0.8"
bincode = "1.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[dev-dependencies]
tempfile = "3.8"

# Integration tests that need testing APIs
[[test]]
name = "test_roundtrip_simple"
path = "tests/test_roundtrip_simple.rs"
required-features = ["test-utils"]

[[test]]
name = "test_roundtrip_vinyl"
path = "tests/test_roundtrip_vinyl.rs"
required-features = ["test-utils"]

[[test]]
name = "test_playback_behavior"
path = "tests/test_playback_behavior.rs"
required-features = ["test-utils"]

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
test-utils = []  # Feature for test helper APIs

[lints.clippy]
too_many_arguments = "allow"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
